firmware/lib/control-table/tests/ui/region_unknown_key.stderr
error: unknown ct_region key (expected addr|size|validators)
  --> tests/ui/region_unknown_key.rs:11:33
   |
11 | #[ct_region(addr = 0, size = 8, nope = 1)]
   |                                 ^^^^
